[package]
name = "raevenmarket"
version = "0.1.0"
authors = ["Nathaniel Graham <ngraham20@my.whitworth.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"